update tablas de ejemplo

--- a/Video Game Sales/Project_AN.ipynb
+++ b/Video Game Sales/Project_AN.ipynb
@@ -1340,7 +1340,7 @@
     "    title=\"Predicción Dinámica de Ventas de Videojuegos\",\n",
     "    examples=[\n",
     "        [\"Wii Sports\", 2006, 41.49, 29.02, 3.77, 8.46, \"Wii\", \"Sports\", \"Nintendo\"],\n",
-    "        [\"Grand Theft Auto V\", 2013, 30.0, 15.0, 2.0, 10.0, \"PS3\", \"Action\", \"Take-Two Interactive\"]\n",
+    "        [\"Grand Theft Auto V\", 2013, 7.01,9.27,0.97,4.14, \"PS3\", \"Action\", \"Take-Two Interactive\"]\n",
     "    ]\n",
     ")\n",
     "\n",
